[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Spatial.gd" type="Script" id=2]
[ext_resource path="res://Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Skin" id=2]

[sub_resource type="Environment" id=3]
background_mode = 1
background_color = Color( 0.207843, 0.207843, 0.207843, 1 )
background_energy = 1.9
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.16
auto_exposure_max_luma = 16.0
glow_enabled = true
glow_intensity = 0.78
glow_strength = 1.19
glow_bloom = 0.15
glow_hdr_threshold = 0.96
glow_hdr_luminance_cap = 39.34
glow_bicubic_upscale = true

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Camera" type="Camera" parent="."]
current = true

[node name="DirectionalLight" type="DirectionalLight" parent="Camera"]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 0.0133474, -2.2537 )
visible = false
texture = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.758134, 0 )

[node name="MeshInstance" type="MeshInstance" parent="." groups=[
"Cube",
]]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -2.20634, 0.00692117, -2.83215 )
mesh = SubResource( 1 )
material/0 = null

[node name="Label" type="Label" parent="MeshInstance"]
custom_fonts/font = SubResource( 4 )
text = "Toilet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance2" type="MeshInstance" parent="." groups=[
"Cube",
]]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 1.61723, -0.0262724, -2.53988 )
mesh = SubResource( 1 )
material/0 = null

[node name="Label" type="Label" parent="MeshInstance2"]
margin_right = 40.0
margin_bottom = 14.0
text = "Door"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance3" type="MeshInstance" parent="." groups=[
"Cube",
]]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.651265, -0.10926, -2.63628 )
mesh = SubResource( 1 )
material/0 = null

[node name="Label" type="Label" parent="MeshInstance3"]
margin_right = 40.0
margin_bottom = 14.0
text = "God"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance4" type="MeshInstance" parent="." groups=[
"Cube",
]]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.580498, -0.152627, -4.13167 )
mesh = SubResource( 1 )
skin = SubResource( 2 )
material/0 = null

[node name="Label" type="Label" parent="MeshInstance4"]
margin_right = 40.0
margin_bottom = 14.0
text = "Graham"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance5" type="MeshInstance" parent="." groups=[
"Cube",
]]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -1.86492, -0.13206, -4.7242 )
mesh = SubResource( 1 )
material/0 = null

[node name="Label" type="Label" parent="MeshInstance5"]
margin_right = 40.0
margin_bottom = 14.0
text = "Cheese"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance7" type="MeshInstance" parent="." groups=[
"Cube",
]]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 1.45204, -0.542643, -4.49848 )
mesh = SubResource( 1 )
material/0 = null

[node name="Label" type="Label" parent="MeshInstance7"]
margin_right = 40.0
margin_bottom = 14.0
text = "Plant"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance6" type="MeshInstance" parent="." groups=[
"Cube",
]]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.016879, 0.753827, -3.23917 )
mesh = SubResource( 1 )
material/0 = null

[node name="Label" type="Label" parent="MeshInstance6"]
margin_right = 40.0
margin_bottom = 14.0
text = "Tea"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]
